2006-09-25  Brian Bidulock  <bidulock@openss7.org>

	* m4/nsl.m4: m4 file to find strnsl package
	* m4/sock.m4: m4 file to find strsock package
	* m4/openss7.m4: added nsl_cv_ and sock_cv_
	* m4/sctp.m4: corrections by inspection
	* m4/ss7.m4: corrections by inspection
	* m4/xns.m4: corrections by inspection
	* m4/xti.m4: corrections by inspection

2006-09-24  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updated release notes
	* NEWS: updated release notes
	* doc/manual/news.texi: updated release notes

2006-09-23  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updated news
	* doc/manual/news.texi: updated news
	* NEWS: updated news

2006-09-22  Brian Bidulock  <bidulock@openss7.org>

	* scripts/kernel-doc: added kernel-doc script

2006-09-18  Brian Bidulock  <bidulock@openss7.org>

	* Makefile.am: added doxy rules
	* doc/manual/todo.texi: marked doxygen todo item done
	* doc/manual/news.texi: added release note

	* am/doxy.am: added makefile fragment
	* scripts/Doxyfile.in: added generic config file
	* m4/doxy.m4: built up autoconf configuration for doxygen
	* am/openss7.am: added doxy target

2006-09-17  Brian Bidulock  <bidulock@openss7.org>
	
	* doc/manual/news.texi: major update notices
	* configure.ac: added 32-bit binary directory lib32/Makefile.am
	* scripts/check_libs: strip library symbol version on check

	* Makefile.am: added 32-bit compatibility libraries and binaries
	* openss7.spec.in: added 32-bit compatibility libraries and binaries

	* m4/dist.m4: added location of 32-bit binaries to autoconf fragments
	* m4/inet.m4: added location of 32-bit binaries to autoconf fragments
	* m4/sctp.m4: added location of 32-bit binaries to autoconf fragments
	* m4/ss7.m4: added location of 32-bit binaries to autoconf fragments
	* m4/strcomp.m4: added location of 32-bit binaries to autoconf fragments
	* m4/streams.m4: added location of 32-bit binaries to autoconf fragments
	* m4/xns.m4: added location of 32-bit binaries to autoconf fragments